--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,4 +1,67 @@
 body {
-    background-color: blueviolet;
-    color: white;
+    background: url("../images/background.jpg") center;
+    background-size: cover;
+    //background-color: rgb(255, 22, 166);
+    margin: 0;
+    padding: 0;
+}
+
+@font-face {
+    src: url('../font/Pacifico/Pacifico-Regular.ttf');
+    font-family: "Pacifico";
+}
+
+@font-face {
+    src: url('../font/cartwheel/Cartwheel.otf');
+    font-family: "Cartwheel";
+}
+
+.section::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background-image: linear-gradient(to bottom, rgba(#0084ff, 0.5), rgba(#03fcad, 0.3));
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.section {
+    height: 100%;
+    margin: 5% 0 0;
+    font-size: 20px;
+}
+
+.you {
+    color: #f0da17;
+    font-size: 50px;
+    text-shadow: 1px 1px 0 #400080, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+    font-family: "Cartwheel", cursive;
+}
+
+.sub-title {
+    font-size: 35px;
+}
+
+.title {
+    height: 55vh;
+    color: #fff;
+    text-shadow: 1px 1px 0 #400080, 0 0 20px yellow;
+    text-align: center;
+    margin: 20% 0 0;
+    font-family: 'Pacifico', cursive;
+    animation: fade 2s ease;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
